--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqx1uicOq+Z+fJlccBybNP",
+      "authorship_tag": "ABX9TyOpfJExoUXARvCre9rcwNz7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,39 +34,61 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Y0AEHVohilt",
-        "outputId": "5f4a7027-2ce3-44de-cacc-d75b7a8ebd94"
+        "outputId": "430b120e-06af-41f6-ff77-46fa2d721b64"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Aldi\n",
+            "Aldi Togar\n",
             "19\n",
+            "pasaman,sumatera barat, 07-12-2005\n",
+            "berenang\n",
+            "Teknik Elektro\n",
             "RPE\n",
+            "4232401018\n",
             "3\n",
             "Pemerograman Dasar\n",
-            "False\n"
+            "False\n",
+            "alditogaraldi@gmail.com\n",
+            "085738415997\n",
+            "togar07_\n"
           ]
         }
       ],
       "source": [
         "# Biodata Saya\n",
         "\n",
-        "nama = \"Aldi\"\n",
+        "nama = \"Aldi Togar\"\n",
         "umur = 19\n",
-        "jurusan = \"RPE\"\n",
+        "tempat_tanggal_lahir = \"pasaman,sumatera barat, 07-12-2005\"\n",
+        "hobi = \"berenang\"\n",
+        "jurusan = 'Teknik Elektro'\n",
+        "program_studi = \"RPE\"\n",
+        "nim = \"4232401018\"\n",
         "semester = 3\n",
         "matakuliah = 'Pemerograman Dasar'\n",
         "status_lulus = False\n",
+        "email = \"alditogaraldi@gmail.com\"\n",
+        "no_telepon = \"085738415997\"\n",
+        "instagram = \"togar07_\"\n",
+        "\n",
         "\n",
         "\n",
         "print (nama)\n",
         "print (umur)\n",
+        "print (tempat_tanggal_lahir)\n",
+        "print (hobi)\n",
         "print (jurusan)\n",
+        "print (program_studi)\n",
+        "print (nim)\n",
         "print (semester)\n",
         "print (matakuliah)\n",
         "print (status_lulus)\n",
+        "print (email)\n",
+        "print (no_telepon)\n",
+        "print (instagram)\n",
         "\n",
         "\n"
       ]
