Dibuat menggunakan Colab

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpfJExoUXARvCre9rcwNz7",
+      "authorship_tag": "ABX9TyM6OwV/+xhhKOs4PPyAnYKZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Y0AEHVohilt",
-        "outputId": "430b120e-06af-41f6-ff77-46fa2d721b64"
+        "outputId": "4caed3ab-8614-4a8a-d26d-636b7e9ba4ab"
       },
       "outputs": [
         {
@@ -44,6 +44,7 @@
             "Aldi Togar\n",
             "19\n",
             "pasaman,sumatera barat, 07-12-2005\n",
+            "O\n",
             "berenang\n",
             "Teknik Elektro\n",
             "RPE\n",
@@ -52,7 +53,7 @@
             "Pemerograman Dasar\n",
             "False\n",
             "alditogaraldi@gmail.com\n",
-            "085738415997\n",
+            "+6285738415997\n",
             "togar07_\n"
           ]
         }
@@ -63,6 +64,7 @@
         "nama = \"Aldi Togar\"\n",
         "umur = 19\n",
         "tempat_tanggal_lahir = \"pasaman,sumatera barat, 07-12-2005\"\n",
+        "golongan_darah = \"O\"\n",
         "hobi = \"berenang\"\n",
         "jurusan = 'Teknik Elektro'\n",
         "program_studi = \"RPE\"\n",
@@ -71,7 +73,7 @@
         "matakuliah = 'Pemerograman Dasar'\n",
         "status_lulus = False\n",
         "email = \"alditogaraldi@gmail.com\"\n",
-        "no_telepon = \"085738415997\"\n",
+        "no_telepon = \"+6285738415997\"\n",
         "instagram = \"togar07_\"\n",
         "\n",
         "\n",
@@ -79,6 +81,7 @@
         "print (nama)\n",
         "print (umur)\n",
         "print (tempat_tanggal_lahir)\n",
+        "print (golongan_darah)\n",
         "print (hobi)\n",
         "print (jurusan)\n",
         "print (program_studi)\n",
