Dibuat menggunakan Colab

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNarIc8qCdpqEWkhzuOCgga",
+      "authorship_tag": "ABX9TyMWBnfsznqQz0IQZGBy8Z4j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,231 +28,83 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# LATIHAN SOAL PEMROGRAMAN DASAR (soal no 05 )\n",
-        "# Nama: Aldi Togar\n",
-        "# NIM: [4232401018]\n",
-        "\n",
-        "# Contoh Dictionary\n",
-        "mahasiswa = {\n",
-        "    'nama': 'Aldi',\n",
-        "    'umur': 19,\n",
-        "    'prodi': 'TRPE'\n",
-        "}\n",
-        "\n",
-        "# Akses menggunakan key\n",
-        "print(mahasiswa['nama'])\n",
-        "\n",
-        "# Akses aman dengan.get()\n",
-        "print(mahasiswa.get('umur'))\n",
-        "print(mahasiswa.get('alamat', 'Tidak ada'))\n",
-        "\n",
-        "# Akses dengan perulangan\n",
-        "for key, value in mahasiswa.items():\n",
-        "    print(f\"{key} : {value}\")\n",
-        "\n",
-        "\n"
-      ],
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "8S5ObmspZeys",
-        "outputId": "c45a52b3-d5d5-432d-9a3b-e1f919a0810e"
+        "id": "lVOdEZiDdhC1",
+        "outputId": "e027d049-94bc-478c-b92c-957b8a42af11"
       },
-      "execution_count": 73,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Aldi\n",
-            "19\n",
-            "Tidak ada\n",
-            "nama : Aldi\n",
-            "umur : 19\n",
-            "prodi : TRPE\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "34"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
+      ],
+      "source": [
+        "# deklarasi variabel list\n",
+        "numbers = [23,43,15,34]\n",
+        "# cara mengakses elemen dan variabel list\n",
+        "numbers [0] # 23\n",
+        "numbers [1] # 43\n",
+        "numbers [2] # 15\n",
+        "numbers [3] # 34\n",
+        "# cara mengubah nilai elemen dalam variabel list\n",
+        "numbers [2] # 51\n",
+        "numbers [2] # 51\n",
+        "\n",
+        "print (numbers[1]) #lakukan untuk setiap indexnya dan lihat hasilnya\n",
+        "\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# LATIHAN SOAL PEMROGRAMAN DASAR (soal no 05 )\n",
-        "# Nama: Aldi Togar\n",
-        "# NIM: [4232401018]\n",
+        "# deklarasi variabel list numbers\n",
+        "numbers = [1,2,3]\n",
         "\n",
-        "# Data Biodata (List)\n",
-        "# Akses data list\n",
-        "Biodata = [\n",
-        "    \"Aldi Togar\",\n",
-        "    19,\n",
-        "    \"berenang\",\n",
-        "    \"Teknik Elektro\",\n",
-        "    \"TRPE\",\n",
-        "    \"Pemrograman Dasar\"\n",
-        "]\n",
+        "# menambahkan elemen di indeks ke-4\n",
+        "numbers.insert(4,5)  # [1, 2, 3, 5]\n",
         "\n",
-        "# Akses dengan Indeks Positif\n",
-        "print(\" AKSES DENGAN INDEKS POSITIF\")\n",
-        "print(\"Nama       :\", Biodata[0])\n",
-        "print(\"Umur       :\", Biodata[1])\n",
-        "print(\"Hobi       :\", Biodata[2])\n",
-        "print(\"Jurusan    :\", Biodata[3])\n",
-        "print(\"Prodi      :\", Biodata[4])\n",
-        "print(\"Matakuliah :\", Biodata[5])\n",
+        "# mengubah elemen di indeks ke-4\n",
+        "numbers[3] = 4       # [1, 2, 3, 4]\n",
         "\n",
+        "# menghapus elemen di indeks ke-2\n",
+        "numbers.pop(2)       # [1, 2, 4]\n",
         "\n",
-        "# Akses dengan Indeks Negatif\n",
-        "\n",
-        "print(\"\\n AKSES DENGAN INDEKS NEGATIF\")\n",
-        "print(\"Matakuliah (dari belakang):\", Biodata[-1])\n",
-        "print(\"Prodi (dari belakang):     \", Biodata[-2])\n",
-        "print(\"Jurusan (dari belakang):   \", Biodata[-3])\n",
-        "\n",
-        "\n",
-        "# Akses dengan Slicing\n",
-        "\n",
-        "print(\"\\n AKSES DENGAN SLICING \")\n",
-        "print(\"Data dari indeks 1-3      :\", Biodata[1:4])     # umur, hobi, jurusan\n",
-        "print(\"3 data pertama            :\", Biodata[:3])      # nama, umur, hobi\n",
-        "print(\"Data mulai indeks ke-3   :\", Biodata[3:])       # jurusan sampai matakuliah\n",
-        "\n",
-        "# Akses dengan Perulangan\n",
-        "print(\"\\n=== AKSES DENGAN PERULANGAN ===\")\n",
-        "for item in Biodata:\n",
-        "    print(item)\n",
-        "\n",
-        "# Akses dengan Enumerate\n",
-        "print(\"\\n=== AKSES DENGAN ENUMERATE (Indeks dan Nilai) ===\")\n",
-        "for i, item in enumerate(Biodata):\n",
-        "    print(f\"Indeks {i} : {item}\")"
+        "#print lalu lihat hasilnya\n",
+        "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aKHPL1SepRwA",
-        "outputId": "f51eeee0-fcc5-4bda-8189-8c5ad8ebb82b"
+        "id": "X5otg06Ymwun"
       },
-      "execution_count": 76,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " AKSES DENGAN INDEKS POSITIF\n",
-            "Nama       : Aldi Togar\n",
-            "Umur       : 19\n",
-            "Hobi       : berenang\n",
-            "Jurusan    : Teknik Elektro\n",
-            "Prodi      : TRPE\n",
-            "Matakuliah : Pemrograman Dasar\n",
-            "\n",
-            " AKSES DENGAN INDEKS NEGATIF\n",
-            "Matakuliah (dari belakang): Pemrograman Dasar\n",
-            "Prodi (dari belakang):      TRPE\n",
-            "Jurusan (dari belakang):    Teknik Elektro\n",
-            "\n",
-            " AKSES DENGAN SLICING \n",
-            "Data dari indeks 1-3      : [19, 'berenang', 'Teknik Elektro']\n",
-            "3 data pertama            : ['Aldi Togar', 19, 'berenang']\n",
-            "Data mulai indeks ke-3   : ['Teknik Elektro', 'TRPE', 'Pemrograman Dasar']\n",
-            "\n",
-            "=== AKSES DENGAN PERULANGAN ===\n",
-            "Aldi Togar\n",
-            "19\n",
-            "berenang\n",
-            "Teknik Elektro\n",
-            "TRPE\n",
-            "Pemrograman Dasar\n",
-            "\n",
-            "=== AKSES DENGAN ENUMERATE (Indeks dan Nilai) ===\n",
-            "Indeks 0 : Aldi Togar\n",
-            "Indeks 1 : 19\n",
-            "Indeks 2 : berenang\n",
-            "Indeks 3 : Teknik Elektro\n",
-            "Indeks 4 : TRPE\n",
-            "Indeks 5 : Pemrograman Dasar\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Bagian Baru"
-      ],
-      "metadata": {
-        "id": "mn_57rozoVMA"
-      }
+      "execution_count": 13,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# LATIHAN SOAL PEMROGRAMAN DASAR (soal no 06 )\n",
-        "# Nama: Aldi Togar\n",
-        "# NIM: [4232401018]\n",
+        "# deklarasi variabel list numbers\n",
+        "numbers = [1, 2, 3]\n",
         "\n",
-        "# implementasi tipe data non primitif\n",
-        "# Variabel Biodata Mahasiswa\n",
-        "nama = \"Aldi Togar\"\n",
-        "umur = 19\n",
-        "hobi = \"berenang\"\n",
-        "jurusan = \"Teknik Elektro\"\n",
-        "prodi = \"TRPE\"\n",
-        "matakuliah = \"Pemrograman Dasar\"\n",
+        "# menambhakan elemen di indeks ke-4\n",
+        "numbers.insert(4, 5) # [1, 2, 3, 5]\n",
         "\n",
-        "print(\"Data Biodata Mahasiswa \")\n",
-        "print(f\"Nama        : {nama}\")\n",
-        "print(f\"Umur        : {umur}\")\n",
-        "print(f\"Hobi        : {hobi}\")\n",
-        "print(f\"Jurusan     : {jurusan}\")\n",
-        "print(f\"Prodi       : {prodi}\")\n",
-        "print(f\"Mata Kuliah : {matakuliah}\")\n",
+        "# mengubah elemen di indeks ke-2\n",
+        "numbers.pop(2) # [1, 2, 4]\n",
         "\n",
-        "\n",
-        "# pengimplementasian tipe data\n",
-        "\n",
-        "#  Menggunakan LIST: Daftar berurutan, bisa diubah (mutable)\n",
-        "biodata_list = [nama, umur, hobi, jurusan, prodi, matakuliah]\n",
-        "print(\"\\n Data Menggunakan LIST \")\n",
-        "print(\"Penjelasan: List adalah koleksi data yang berurutan dan nilainya dapat diubah.\")\n",
-        "print(f\"Isi List  : {biodata_list}\")\n",
-        "\n",
-        "# Menggunakan TUPLE: Daftar berurutan, tidak bisa diubah (immutable)\n",
-        "biodata_tuple = (nama, umur, hobi, jurusan, prodi, matakuliah)\n",
-        "print(\"\\n Data Menggunakan TUPLE\")\n",
-        "print(\"Penjelasan: Tuple adalah koleksi data yang berurutan, namun nilainya tidak dapat diubah setelah dibuat.\")\n",
-        "print(f\"Isi Tuple : {biodata_tuple}\")\n",
-        "\n",
-        "# Menggunakan SET: Koleksi tidak berurutan, tanpa duplikat\n",
-        "# Bisa digunakan untuk data unik seperti daftar mata kuliah yang diambil atau hobi\n",
-        "biodata_set = {nama, umur, hobi, jurusan, prodi, matakuliah}\n",
-        "print(\"\\n Data Menggunakan SET \")\n",
-        "print(\"Penjelasan: Set adalah koleksi data yang tidak berurutan dan secara otomatis menghilangkan nilai duplikat.\")\n",
-        "print(f\"Isi Set   : {biodata_set}\")\n",
-        "\n",
-        "\n",
-        "# Menggunakan DICTIONARY: Koleksi pasangan key-value\n",
-        "# Setiap nilai diakses menggunakan kunci unik (key)\n",
-        "data_mahasiswa = {\n",
-        "    \"nama\": nama,\n",
-        "    \"umur\": umur,\n",
-        "    \"hobi\": hobi,\n",
-        "    \"jurusan\": jurusan,\n",
-        "    \"prodi\": prodi,\n",
-        "    \"matakuliah\": matakuliah\n",
-        "}\n",
-        "print(\"\\n Data Menggunakan DICTIONARY \")\n",
-        "print(\"Penjelasan: Dictionary menyimpan data dalam pasangan kunci (key) dan nilai (value), memudahkan akses data dengan nama kuncinya.\")\n",
-        "for key, value in data_mahasiswa.items():\n",
-        "    print(f\"- {key:<11}: {value}\")\n",
-        "\n"
+        "#print setiap hasil perubahan dan amati hasilnya\n"
       ],
       "metadata": {
-        "id": "EP9km7m-oCIl"
+        "id": "G9u2YH805jEu"
       },
       "execution_count": null,
       "outputs": []
@@ -261,66 +112,179 @@
     {
       "cell_type": "code",
       "source": [
+        "# deklarasi variabel list\n",
+        "myList = [1,\"Rumah\", 4.5, True,[\"Kamar mandi\", \"Kamar mandi\"]]\n",
         "\n",
-        "# LATIHAN SOAL PEMROGRAMAN DASAR (soal no 07 )\n",
-        "# Nama: Aldi Togar\n",
-        "# NIM: [4232401018]\n",
+        "# cara mengakses elemen dalam variabel list\n",
+        "myList [0] # 1\n",
+        "myList [1] # \"Rumah\"\n",
+        "myList [3] # True\n",
+        "myList [4] # [\"Kamar mandi\", \"Kamar tidur\"]\n",
         "\n",
+        "# cara mengakses elemen dalam sublist\n",
+        "myList[4][0] # \"kamar tidur\"\n",
+        "myList[4][1] # \"kamar tidur\"\n",
         "\n",
-        "# Program Sederhana dengan Type Annotation\n",
-        "# Data Biodata Mahasiswa\n",
-        "biodata_mahasiswa = {\n",
-        "    'nama': 'Aldi Togar',\n",
-        "    'umur': 19,\n",
-        "    'hobi': 'berenang',\n",
-        "    'jurusan': 'teknik elektro',\n",
-        "    'prodi': 'TRPE',\n",
-        "    'semester': 3,\n",
-        "    'matakuliah': 'pemrograman dasar',\n",
-        "    'status_lulus': False\n",
-        "}\n",
+        "#lakukan print lalu amati hasilnya\n"
+      ],
+      "metadata": {
+        "id": "1wJMa8KI7Nvz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "FirstName = \"Aldi\"\n",
+        "LastName  = \"Togar\"\n",
+        "Age       = 19\n",
+        "isMarried = False\n",
         "\n",
-        "# Fungsi dengan Type Annotation\n",
-        "def tampilkan_info_mahasiswa(data: dict) -> None:\n",
-        "    \"\"\"\n",
-        "    Menampilkan informasi mahasiswa dari dictionary dengan type annotation.\n",
-        "    \"\"\"\n",
-        "    nama: str = data.get('nama', 'N/A')\n",
-        "    umur: int = data.get('umur', 0)\n",
-        "    jurusan: str = data.get('jurusan', 'N/A')\n",
-        "    status_lulus: bool = data.get('status_lulus', False)\n",
+        "# OUTPUT\n",
         "\n",
-        "    print(\"-Informasi Mahasiswa -\")\n",
-        "    print(f\"Nama         : {nama}\")\n",
-        "    print(f\"Umur         : {umur}\")\n",
-        "    print(f\"Jurusan      : {jurusan}\")\n",
-        "    print(f\"Status Lulus : {'Sudah Lulus' if status_lulus else 'Belum Lulus'}\")\n",
-        "\n",
-        "\n",
-        "# Panggil fungsi\n",
-        "tampilkan_info_mahasiswa(biodata_mahasiswa)"
+        "print (\"FirstName:\", FirstName)\n",
+        "print (\"LastName:\", LastName)\n",
+        "print (\"Age:\",Age)\n",
+        "print (\"isMarried:\",isMarried)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "af8C0Q5dfE0m",
-        "outputId": "a600dc00-1327-4df9-fef4-2c6a9713a762"
+        "id": "FXiIUM7PpqWI",
+        "outputId": "cf11b458-1b2c-42b2-e05a-a9883e246117"
       },
-      "execution_count": 72,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "-Informasi Mahasiswa -\n",
-            "Nama         : Aldi Togar\n",
-            "Umur         : 19\n",
-            "Jurusan      : teknik elektro\n",
-            "Status Lulus : Belum Lulus\n"
+            "FirstName: Aldi\n",
+            "LastName: Togar\n",
+            "Age: 19\n",
+            "isMarried: False\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# VARIABEL DICTIONARY\n",
+        "\n",
+        "data_diri = {\n",
+        "    \"FirstName\" : \"Aldi\",\n",
+        "    \"LastName\" : \"Togar\",\n",
+        "    \"Age\" : 19,\n",
+        "    \"isMarried\" : False\n",
+        "}\n",
+        "\n",
+        "# OUTPUT DIOCTIONARY\n",
+        "\n",
+        "print (data_diri[\"FirstName\"])\n",
+        "print (data_diri[\"LastName\"])\n",
+        "print (data_diri[\"Age\"])\n",
+        "print (data_diri[\"isMarried\"])"
+      ],
+      "metadata": {
+        "id": "WC-e92eRqSMi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: VARIABEL INPEKSI BERTIPE DATA LIST\n",
+        "inpeksi = [\n",
+        "    \"pemahaman terhadap rencanca dan desain \",\n",
+        "    \"ketersediaan bahan dan peralatan\",\n",
+        "    \"pengawasan pekerjaan\",\n",
+        "    \"kualitas kontruksi\",\n",
+        "    \"keselamatan kerja\",\n",
+        "    \"koordinasi dengan pemilik proyek\",\n",
+        "]\n",
+        "\n",
+        "#OUTPUT DAFTAR INSPEKSI\n",
+        "print(\"Daftar Inspeksi:\")\n",
+        "for index, item in enumerate(inpeksi, start=1):\n",
+        "    print(f\"{index}. {item}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wQMoz5sGrNic",
+        "outputId": "9abfe011-fd4f-4003-da3d-bd5fa71d8a5b"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Daftar Inspeksi:\n",
+            "1. pemahaman terhadap rencanca dan desain \n",
+            "2. ketersediaan bahan dan peralatan\n",
+            "3. pengawasan pekerjaan\n",
+            "4. kualitas kontruksi\n",
+            "5. keselamatan kerja\n",
+            "6. koordinasi dengan pemilik proyek\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#TIPE DATA DICTIONARY\n",
+        "\n",
+        "start_time = {\n",
+        "    \"HH\":9,\n",
+        "    \"mm\":23,\n",
+        "    \"ss\":57\n",
+        "}\n",
+        "\n",
+        "end_Time ={\n",
+        "    \"HH\":15,\n",
+        "    \"mm\":25,\n",
+        "    \"ss\":43\n",
+        "\n",
+        "}\n",
+        "\n",
+        "# OUTPUT\n",
+        "print(\"Start Time;\", start_time)\n",
+        "print(\"End Time;\", end_Time)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PkkC9jTVwO_n",
+        "outputId": "dc46b861-4ea8-4006-e12c-edc9d4dc700e"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Start Time; {'HH': 9, 'mm': 23, 'ss': 57}\n",
+            "End Time; {'HH': 15, 'mm': 25, 'ss': 43}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HwfgRFq7yA5v"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
